--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -33,4 +33,4 @@ build-override.opt-level = 2
 svix-server_derive = { opt-level = 0 }
 
 [patch.crates-io]
-hyper = { git = "https://github.com/svix/hyper/", rev = "63efac5a6719937359d61a1bb1b93d9ce88f0e3d" }
+hyper = { git = "https://github.com/svix/hyper.git", rev = "18c04c321e1a9a4958ad14b880f7403acbe1c914" }
