--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -10,6 +10,7 @@ readme = "../README.md"
 license = "MIT"
 keywords = ["svix", "webhooks", "diahook"]
 categories = ["development-tools", "asynchronous", "network-programming", "web-programming"]
+include = ["src/**/*", "README.md"]
 
 [features]
 # openssl-sys keeps showing up in the CLI dep graph, breaking the build, even when
