WIP: update bridge to use new rust lib, refactor poller input

--- a/bridge/svix-bridge-types/Cargo.toml
+++ b/bridge/svix-bridge-types/Cargo.toml
@@ -9,7 +9,7 @@ async-trait = "0.1"
 tokio.workspace = true
 serde.workspace = true
 serde_json.workspace = true
-svix = { version = "1.25.0", features = ["svix_beta"] }
+svix = { path = "../../rust", features = ["svix_beta"] }
 
 [lints]
 workspace = true
