Remove all references to old `regen_openapi.sh`

--- a/.github/workflows/cli-lint.yml
+++ b/.github/workflows/cli-lint.yml
@@ -49,15 +49,9 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    # the codegen uses `rustfmt +nightly`
-    - uses: dtolnay/rust-toolchain@nightly
-      with:
-        components: rustfmt
-
     - name: Regen openapi libs
       run: |
-        yarn
-        ./regen_openapi.sh
+        ./regen_openapi.py
 
     - uses: dtolnay/rust-toolchain@master
       with:
