--- a/.github/workflows/cli-lint.yml
+++ b/.github/workflows/cli-lint.yml
@@ -50,8 +50,7 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Regen openapi libs
-      run: |
-        ./regen_openapi.py
+      run: ./regen_openapi.py
 
     - uses: dtolnay/rust-toolchain@master
       with:
