--- a/.github/workflows/codegen.yml
+++ b/.github/workflows/codegen.yml
@@ -26,8 +26,7 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Regen openapi libs
-      run: |
-        ./regen_openapi.py
+      run: ./regen_openapi.py
 
     - name: Check for uncommitted changes
       run: |
