--- a/.github/workflows/rust-lint.yml
+++ b/.github/workflows/rust-lint.yml
@@ -48,8 +48,7 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Regen openapi libs
-      run: |
-        ./regen_openapi.py
+      run: ./regen_openapi.py
 
     - uses: dtolnay/rust-toolchain@master
       with:
