--- a/codegen.toml
+++ b/codegen.toml
@@ -3,7 +3,7 @@ openapi = "lib-openapi.json"
 
 [rust]
 template_dir = "rust/templates"
-extra_mounts = [["rust/.rustfmt.toml", "/app/.rustfmt.toml"]]
+extra_mounts = { "rust/.rustfmt.toml" = "/app/.rustfmt.toml" }
 extra_shell_commands = ["rm rust/src/api/{environment,health}.rs"]
 [[rust.task]]
 template = "rust/templates/api_resource.rs.jinja"
@@ -29,7 +29,7 @@ output_dir = "javascript/src/models"
 
 [cli]
 template_dir = "svix-cli/templates"
-extra_mounts = [["svix-cli/.rustfmt.toml", "/app/.rustfmt.toml"]]
+extra_mounts = { "svix-cli/.rustfmt.toml" = "/app/.rustfmt.toml" }
 extra_shell_commands = [
     "cargo fix --manifest-path svix-cli/Cargo.toml --allow-dirty",
     "cargo fmt --manifest-path svix-cli/Cargo.toml",
