--- a/codegen.toml
+++ b/codegen.toml
@@ -18,16 +18,33 @@ output_dir = "rust/src/models"
 
 [javascript]
 template_dir = "javascript/templates"
-extra_shell_commands = ["rm javascript/src/api/{ingest,ingestSource,operationalWebhook}.ts"]
+extra_shell_commands = [
+   "rm javascript/src/models/retryScheduleInOut.ts",
+   "rm javascript/src/models/listResponseSinkOut.ts",
+   "rm javascript/src/api/{ingest,ingestSource,operationalWebhook}.ts",
+]
 [[javascript.task]]
 template = "javascript/templates/api_resource.ts.jinja"
 output_dir = "javascript/src/api"
+[[javascript.task]]
+template = "javascript/templates/api_resource.ts.jinja"
+output_dir = "javascript/src/api_internal"
+extra_codegen_args = [
+   "--include-mode=only-hidden",
+   "-e=v1.environment.get-settings",
+   "-e=v1.event-type.update-retry-schedule",
+   "-e=v1.event-type.get-retry-schedule",
+   "-e=v1.sink.get",
+   "-e=v1.sink.list",
+   "-e=v1.sink.create",
+]
 [[javascript.task]]
 template = "javascript/templates/component_type_summary.ts.jinja"
 output_dir = "javascript/src/models"
 [[javascript.task]]
 template = "javascript/templates/component_type.ts.jinja"
 output_dir = "javascript/src/models"
+extra_codegen_args = ["--include-mode=public-and-hidden"]
 #
 #
 [cli]
