--- a/codegen.toml
+++ b/codegen.toml
@@ -97,7 +97,7 @@ output_dir = "ruby/lib/svix/models"
 [csharp]
 template_dir = "csharp/templates"
 extra_shell_commands = [
-   "rm csharp/Svix/{IngestEndpoint,Ingest,OperationalWebhook}.cs",
+   "rm csharp/Svix/{IngestEndpoint,Ingest}.cs",
 ]
 [[csharp.task]]
 template = "csharp/templates/api_resource.cs.jinja"
