--- a/codegen.toml
+++ b/codegen.toml
@@ -138,7 +138,7 @@ output_dir = "go/models"
 
 [kotlin]
 extra_shell_commands = [
-   "rm kotlin/lib/src/main/kotlin/{Ingest,OperationalWebhook}.kt",
+   "rm kotlin/lib/src/main/kotlin/Ingest.kt",
 ]
 template_dir = "kotlin/templates"
 [[kotlin.task]]
