bridge: Fix dockerfile

--- a/.github/workflows/bridge-release.yml
+++ b/.github/workflows/bridge-release.yml
@@ -78,7 +78,7 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
         with:
-          context: ./bridge
+          context: ./
           file: ./bridge/Dockerfile
           push: true
           tags: ${{ env.DOCKER_TAGS }}
