ci: Work around upstream breakage

--- a/.github/workflows/bridge-ci.yml
+++ b/.github/workflows/bridge-ci.yml
@@ -50,6 +50,12 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
+    # GitHub broke stuff: https://github.com/actions/runner-images/issues/11926
+    - name: Install CMake v3.31
+      uses: jwlawson/actions-setup-cmake@09fd9b0fb3b239b4b68d9256cd65adf8d6b91da0
+      with:
+        cmake-version: '3.31.x'
+
     - uses: dtolnay/rust-toolchain@master
       with:
         toolchain: ${{ matrix.rust }}
