--- a/server/svix-server/Cargo.toml
+++ b/server/svix-server/Cargo.toml
@@ -6,6 +6,12 @@ publish = false
 edition.workspace = true
 license.workspace = true
 
+[package.metadata.cargo-machete]
+ignored = [
+    # not a direct dependency, but we want to pin its version
+    "idna_adapter",
+]
+
 [dependencies]
 svix-server_derive = { path = "../svix-server_derive" }
 
