--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -1,7 +1,7 @@
-python_dateutil >= 2.5.3
-setuptools >= 21.0.0
-urllib3 >= 1.25.3
-Deprecated >= 1.2.13
-types-deprecated >= 1.2.5
-types-python-dateutil >= 2.8.9
-pydantic >= 2.10
+python_dateutil>=2.5.3,<3
+setuptools>=21.0.0,<22
+urllib3>=1.25.3,<2
+Deprecated>=1.2.13,<2
+types-deprecated>=1.2.5,<2
+types-python-dateutil>=2.8.9,<3
+pydantic>=2.10,<3
