Set server version via workspace manifest
… and use the same version for the derive crate.

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -19,6 +19,7 @@ uninlined_format_args = "warn"
 [workspace.package]
 edition = "2021"
 license = "MIT"
+version = "1.64.1"
 
 [profile.dev]
 # optimize host dependencies for faster rebuilds.
