--- a/server/svix-server/Cargo.toml
+++ b/server/svix-server/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "svix-server"
-version = "1.64.1"
 description = "Svix webhooks server"
 publish = false
+version.workspace = true
 edition.workspace = true
 license.workspace = true
 
