--- a/server/svix-server_derive/Cargo.toml
+++ b/server/svix-server_derive/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "svix-server_derive"
-version = "0.1.0"
 publish = false
+version.workspace = true
 edition.workspace = true
 license.workspace = true
 
