--- a/codegen.toml
+++ b/codegen.toml
@@ -113,22 +113,22 @@ output_dir = "java/lib/src/main/java/com/svix/models"
 
 
 [go]
-template_dir = "openapi-templates/go"
+template_dir = "codegen-templates/go"
 extra_shell_commands = [
    "rm go/health.go",
    "sed -i 's/package svix/package internalapi/g' go/internalapi/management*"
 ]
 [[go.task]]
-template = "openapi-templates/go/api_resource.go.jinja"
+template = "codegen-templates/go/api_resource.go.jinja"
 output_dir = "go"
 [[go.task]]
-template = "openapi-templates/go/component_type_summary.go.jinja"
+template = "codegen-templates/go/component_type_summary.go.jinja"
 output_dir = "go"
 [[go.task]]
-template = "openapi-templates/go/component_type.go.jinja"
+template = "codegen-templates/go/component_type.go.jinja"
 output_dir = "go/models"
 [[go.task]]
-template = "openapi-templates/go/api_resource.go.jinja"
+template = "codegen-templates/go/api_resource.go.jinja"
 output_dir = "go/internalapi"
 extra_codegen_args = [
    # This is a limited list of operations required by terraform
@@ -142,7 +142,7 @@ extra_codegen_args = [
    "--include-op-id=v1.management.environment-settings.update"
 ]
 [[go.task]]
-template = "openapi-templates/go/component_type.go.jinja"
+template = "codegen-templates/go/component_type.go.jinja"
 output_dir = "go/models"
 extra_codegen_args = [
    # This is a limited list of operations required by terraform
