--- a/csharp/Svix/Svix.csproj
+++ b/csharp/Svix/Svix.csproj
@@ -6,6 +6,7 @@
     <Version>1.64.1</Version>
     <Authors>Svix</Authors>
     <Company>Svix</Company>
+    <LangVersion>12.0</LangVersion>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
