rust: Generate api/mod.rs
Whenever we added a new API, postprocessing for Svix CLI was failing
because the new API wasn't yet re-exported in this file, so the Rust SDK
imports inside the CLI were failing to resolve. This fixes that.

--- a/codegen.toml
+++ b/codegen.toml
@@ -9,6 +9,9 @@ extra_shell_commands = ["rm rust/src/api/health.rs"]
 template = "codegen-templates/rust/api_resource.rs.jinja"
 output_dir = "rust/src/api"
 [[rust.task]]
+template = "codegen-templates/rust/api_summary.rs.jinja"
+output_dir = "rust/src/api"
+[[rust.task]]
 template = "codegen-templates/rust/component_type_summary.rs.jinja"
 output_dir = "rust/src/models"
 [[rust.task]]
