csharp: Add nuget package metadata

--- a/csharp/Svix/Svix.csproj
+++ b/csharp/Svix/Svix.csproj
@@ -9,6 +9,9 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <RepositoryUrl>https://github.com/svix/svix-webhooks.git</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/svix/svix-webhooks/tree/main/csharp</PackageProjectUrl>
   </PropertyGroup>
 
   <ItemGroup>
