Add CI for libs to push on main

--- a/.github/workflows/cli-lint.yml
+++ b/.github/workflows/cli-lint.yml
@@ -8,6 +8,7 @@ on:
       - 'svix-cli/**'
       - 'rust/**'
       - '.github/workflows/cli-lint.yml'
+      - 'lib-openapi.json'
   pull_request:
     paths:
       - 'svix-cli/**'
