--- a/.github/workflows/rust-lint.yml
+++ b/.github/workflows/rust-lint.yml
@@ -7,6 +7,7 @@ on:
     paths:
       - 'rust/**'
       - '.github/workflows/rust-lint.yml'
+      - "lib-openapi.json"
   pull_request:
     paths:
       - 'rust/**'
