--- a/.github/workflows/csharp-lint.yml
+++ b/.github/workflows/csharp-lint.yml
@@ -5,14 +5,14 @@ on:
     paths:
       - "csharp/**"
       - "lib-openapi.json"
-      - '.github/workflows/csharp-lint.yml'
+      - ".github/workflows/csharp-lint.yml"
   push:
     branches:
       - main
     paths:
       - "csharp/**"
       - "lib-openapi.json"
-      - '.github/workflows/csharp-lint.yml'
+      - ".github/workflows/csharp-lint.yml"
 
 jobs:
   dotnet:
