--- a/.github/workflows/java-lint.yml
+++ b/.github/workflows/java-lint.yml
@@ -22,8 +22,8 @@ jobs:
       - name: Setup Java
         uses: actions/setup-java@v4
         with:
-          distribution: 'temurin'
-          java-version: '11'
+          distribution: "temurin"
+          java-version: "11"
 
       - name: Build
         run: |
