--- a/.github/workflows/java-release.yml
+++ b/.github/workflows/java-release.yml
@@ -20,8 +20,8 @@ jobs:
       - name: Setup Java
         uses: actions/setup-java@v4
         with:
-          distribution: 'temurin'
-          java-version: '11'
+          distribution: "temurin"
+          java-version: "11"
 
       - name: Restore gradle.properties
         run: |
