--- a/.github/workflows/server-security.yml
+++ b/.github/workflows/server-security.yml
@@ -8,16 +8,16 @@ on:
     branches:
     - main
     paths:
-      - 'server/**/Cargo.toml'
-      - 'server/**/Cargo.lock'
-      - '.github/workflows/server-security.yml'
-      - 'deny.toml'
+      - "server/**/Cargo.toml"
+      - "server/**/Cargo.lock"
+      - ".github/workflows/server-security.yml"
+      - "deny.toml"
   pull_request:
     paths:
-      - 'server/**/Cargo.toml'
-      - 'server/**/Cargo.lock'
-      - '.github/workflows/server-security.yml'
-      - 'deny.toml'
+      - "server/**/Cargo.toml"
+      - "server/**/Cargo.lock"
+      - ".github/workflows/server-security.yml"
+      - "deny.toml"
 
 jobs:
   security_audit:
