--- a/.github/workflows/kotlin-lint.yml
+++ b/.github/workflows/kotlin-lint.yml
@@ -5,14 +5,14 @@ on:
     paths:
       - "kotlin/**"
       - "lib-openapi.json"
-      - '.github/workflows/kotlin-lint.yml'
+      - ".github/workflows/kotlin-lint.yml"
   push:
     branches:
       - main
     paths:
       - "javascript/**"
       - "lib-openapi.json"
-      - '.github/workflows/javascript-lint.yml'
+      - ".github/workflows/javascript-lint.yml"
 
 jobs:
   kotlin:
@@ -25,8 +25,8 @@ jobs:
       - name: Setup Java
         uses: actions/setup-java@v4
         with:
-          distribution: 'temurin'
-          java-version: '11'
+          distribution: "temurin"
+          java-version: "11"
 
       - name: Build
         run: |
