--- a/.github/workflows/python-release.yml
+++ b/.github/workflows/python-release.yml
@@ -20,7 +20,7 @@ jobs:
       - uses: actions/setup-python@v5
         name: Install Python
         with:
-          python-version: '3.11'
+          python-version: "3.11"
 
       - name: Install deps
         run: |
