--- a/composer.json
+++ b/composer.json
@@ -13,13 +13,13 @@
         }
     ],
     "require": {
-        "php": ">=5.6.0",
+        "php": "^8.0",
         "ext-json": "*"
-      },
+    },
     "require-dev": {
-        "phpunit/phpunit": "^5.7",
+        "phpunit/phpunit": "^11.0",
         "friendsofphp/php-cs-fixer": "^3.0",
-        "phpstan/phpstan": "^0.12.89"
+        "phpstan/phpstan": "^2.0"
     },
     "autoload": {
         "psr-4": {
