csharp: Automatically send an idempotency key on all requests

--- a/csharp/justfile
+++ b/csharp/justfile
@@ -2,5 +2,5 @@ _default:
     just --list --justfile {{ justfile() }}
 
 fmt *args='':
-    dotnet csharpier Svix {{ args }}
-    dotnet csharpier Svix.Tests {{ args }}
+    csharpier format Svix {{ args }}
+    csharpier format Svix.Tests {{ args }}
