--- a/javascript/package.json
+++ b/javascript/package.json
@@ -34,13 +34,15 @@
     "es6-promise": "^4.2.8",
     "fast-sha256": "^1.3.0",
     "svix-fetch": "^3.0.0",
-    "url-parse": "^1.5.10"
+    "url-parse": "^1.5.10",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.20.0",
     "@stablelib/utf8": "^2.0.0",
     "@types/jest": "^29.5.13",
     "@types/url-parse": "1.4.11",
+    "@types/uuid": "^10.0.0",
     "eslint": "^9.20.1",
     "globals": "^15.15.0",
     "jest": "^29.7.0",
