--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -44,6 +44,7 @@ thiserror = "2.0.11"
 time = "0.3"
 tokio = { version = "1.41.0", features = ["time"] }
 url = "2.2"
+uuid = { version = "1", features = ["v4"] }
 
 [dev-dependencies]
 tokio = { version = "1.41.0", features = ["macros"] }
