implement healthchecks in docker-compose for 3rd parties

--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -13,11 +13,18 @@ services:
     ports:
       - "8071:8071"
     depends_on:
-    - pgbouncer
-    - redis
+      pgbouncer:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
 
   postgres:
     image: "docker.io/postgres:13.4"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 1s
+      timeout: 1s
+      retries: 600
     volumes:
       - "postgres-data:/var/lib/postgresql/data/"
     environment:
@@ -36,10 +43,16 @@ services:
       DB_PASSWORD: "postgres"
       MAX_CLIENT_CONN: 500
     depends_on:
-    - postgres
+      postgres:
+        condition: service_healthy
 
   redis:
     image: "docker.io/redis:7-alpine"
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 1s
+      timeout: 1s
+      retries: 600
     # Enable persistence
     command: "--save 60 500 --appendonly yes --appendfsync everysec"
     volumes:
