--- a/server/svix-server/Cargo.toml
+++ b/server/svix-server/Cargo.toml
@@ -21,7 +21,7 @@ dotenvy = "0.15.7"
 hmac-sha256 = "1"
 clap = { version = "4.1.8", features = ["derive"] }
 axum = { version = "0.6.1", features = ["headers"] }
-base64 = "0.13.0"
+base64 = "0.22"
 hyper = { version = "=0.14.28", features = ["full"] }
 hyper-openssl = "0.9.2"
 hyper-socks2 = "0.8.0"
@@ -85,6 +85,7 @@ omniqueue = { git = "https://github.com/svix/omniqueue-rs", rev = "63fe1f303c547
 hyper-proxy = { version = "=0.9.1", default-features = false, features = ["openssl-tls"] }
 hex = "0.4.3"
 anyhow = "1.0.56"
+itertools = "0.14"
 
 [target.'cfg(not(target_env = "msvc"))'.dependencies]
 tikv-jemallocator = { version = "0.5", optional = true }
