--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -6,13 +6,12 @@ services:
       dockerfile: Dockerfile
     image: svix/svix-server
     healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:8071/api/v1/health"]
-      # test: ["CMD-SHELL", "svix-server healthcheck"]
+      test: ["CMD-SHELL", "svix-server healthcheck http://localhost:8071"]
       interval: 1s
       timeout: 1s
       retries: 600
     environment:
-      WAIT_FOR: "true"  # We want to wait for the default services
+      WAIT_FOR: "true" # We want to wait for the default services
       SVIX_REDIS_DSN: "redis://redis:6379"
       SVIX_DB_DSN: "postgresql://postgres:postgres@pgbouncer/postgres"
       # SVIX_JWT_SECRET: "x"  # IMPORTANT: uncomment and set a real JWT secret here.
